--- a/Formulas.ipynb
+++ b/Formulas.ipynb
@@ -449,6 +449,15 @@
     "\\end{bmatrix}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
