--- a/matrix_math practice.ipynb
+++ b/matrix_math practice.ipynb
@@ -535,6 +535,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def matrix_row(matrx, idx):\n",
+    "    #for row in matrx:\n",
+    "    row = matrx[idx]\n",
+    "    return row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 5, 6], [4, 5, 6], [4, 5, 6]]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_row(B, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def matrix_col(matrix, idx):\n",
+    "    #for row in matrix:\n",
+    "    col = [row[idx] for row in matrix]\n",
+    "        #for col in row:\n",
+    "            #col_list = [row[idx]\n",
+    "            #col_list.append(col_num)\n",
+    "    return col\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_col(D, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
