--- a/matrix_math practice.ipynb
+++ b/matrix_math practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "class ShapeException(Exception):\n",
+    "class ShapeException(Exception): \n",
     "    print(\"This is invalid.  Shapes are not compatible\")\n",
     "    #exit()"
    ]
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 169,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +284,7 @@
     "    #else:\n",
     "        output_vector = []\n",
     "        for i in range(len(args)):\n",
-    "            output_num = sum(args[i]) \n",
+    "            output_num = args[i] \n",
     "            output_vector.append(output_num)\n",
     "        return output_vector\n",
     "    \n",
@@ -295,18 +295,41 @@
     "        output_vector = []\n",
     "        for i in args:\n",
     "            #print(i)\n",
-    "            for x in range(len(i)):\n",
+    "            #vec_row = [i[x] for x in range(len(i))]\n",
+    "            #vec_row = matrix_col(i, range(len(i)))\n",
+    "            output_row = []\n",
+    "            vec_len = len(i)\n",
+    "            idx_range = range(vec_len)\n",
+    "            output_num = [i[y] for y in idx_range]\n",
+    "            print(output_num)\n",
+    "            #for x in i:\n",
+    "                #vec_row = [i[y] for y in range(len(i))]\n",
     "                #vec_len = len(i)\n",
     "                #idx_range = range(vec_len)\n",
-    "                #print(x)\n",
-    "                output_num = sum(i[x]) \n",
-    "                output_vector.append(output_num)\n",
-    "        return output_vector"
+    "                #print(idx_range)\n",
+    "                #output_num = [i[y] for y in idx_range] \n",
+    "                #output_vector.append(output_num)\n",
+    "                #print(output_num)\n",
+    "            #output_vector.append(ouput_row)\n",
+    "        return output_num\n",
+    "    \n",
+    "def vector_sum3(*args):\n",
+    "    if shape(args) == True:\n",
+    "        raise ShapeException()\n",
+    "    else:\n",
+    "        vec_len = len(args[0])\n",
+    "        vecs_total = []\n",
+    "        for x in range(0, vec_len):\n",
+    "            replacement_num = 0\n",
+    "            for vec in args:\n",
+    "                replacement_num += vec[x]\n",
+    "            vecs_total.append(replacement_num)\n",
+    "        return vecs_total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 170,
    "metadata": {
     "collapsed": true
    },
@@ -317,33 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-2d13e2cc165d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mi_hope_this_works\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvector_sum2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#assert vector_sum2(v, w, u, y, z) == [12, 26, 35]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-21-91f30e3a0374>\u001b[0m in \u001b[0;36mvector_sum2\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m     26\u001b[0m                 \u001b[0;31m#idx_range = range(vec_len)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m                 \u001b[0;31m#print(x)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m                 \u001b[0moutput_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m                 \u001b[0moutput_vector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0moutput_vector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
-   "source": [
-    "i_hope_this_works = vector_sum2(v, w, u, y, z)\n",
-    "print(\"\")\n",
-    "#assert vector_sum2(v, w, u, y, z) == [12, 26, 35]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false
    },
@@ -352,12 +349,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 6, 3, 4, 6, 3, 4, 6, 3, 4, 6, 3, 4, 6, 3]\n"
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "i_hope_this_works = vector_sum3(v, w, u, y, z)\n",
+    "print(\"\")\n",
+    "#assert vector_sum2(v, w, u, y, z) == [12, 26, 35]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 26, 35]\n"
      ]
     }
    ],
    "source": [
     "print(i_hope_this_works)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-168-60320e96f905>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mvector_sum3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-164-4d6e394bf89f>\u001b[0m in \u001b[0;36mvector_sum3\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0mreplacement_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m                 \u001b[0mreplacement_num\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m             \u001b[0mvecs_total\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreplacement_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mvecs_total\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "m = [3, 4]\n",
+    "n = [5, 0]\n",
+    "\n",
+    "v = [1, 3, 0]\n",
+    "w = [0, 2, 4]\n",
+    "u = [1, 1, 1]\n",
+    "y = [10, 20, 30]\n",
+    "z = [0, 0, 0]\n",
+    "vector_sum3(v, w, m, y)"
    ]
   },
   {
@@ -571,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -607,6 +657,74 @@
    ],
    "source": [
     "matrix_col(D, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "def dot(vec1, vec2):\n",
+    "    if shape(vec1) != shape(vec2):\n",
+    "        raise ShapeException()\n",
+    "    vec_for_addition = []\n",
+    "    vec_len = range(len(vec1))\n",
+    "    for x in vec_len:\n",
+    "        pos_multiplication = vec1[x] * vec2[x]\n",
+    "        vec_for_addition.append(pos_multiplication)\n",
+    "    dot_total = reduce(lambda x, y: x + y, vec_for_addition)\n",
+    "    return dot_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot(w, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ShapeException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mShapeException\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-182-ecbc1f100c36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-175-24f0c62edade>\u001b[0m in \u001b[0;36mdot\u001b[0;34m(vec1, vec2)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvec2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mShapeException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mvec_for_addition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mvec_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mShapeException\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "dot(v, m)"
    ]
   },
   {
